--- a/coastr/src/pages/App/App.css
+++ b/coastr/src/pages/App/App.css
@@ -5,8 +5,11 @@
 .App-header {
   background-color: #222;
   height: 50px;
-  padding: 20px;
-  color: white;
+  padding: 0px;
   font-size: 40px;
   text-align: center;
+}
+
+.Coastr-link {
+  color: orange;
 }
