--- a/coastr/src/components/NavBar/NavBar.css
+++ b/coastr/src/components/NavBar/NavBar.css
@@ -1,3 +1,9 @@
 .NavBar-welcome {
-  color: grey;
+  color: rgb(216, 216, 216);
+  font-weight: 900;
+}
+
+.NavBar-link {
+  font-size: 1.5rem;
+  color: black;
 }
