--- a/coastr/src/pages/CreateDrinkPage/CreateDrinkPage.css
+++ b/coastr/src/pages/CreateDrinkPage/CreateDrinkPage.css
@@ -4,3 +4,45 @@
 
 .spirits-dropdown {
 }
+
+.build {
+  flex-shrink: 0;
+  flex-grow: 0;
+  padding: 2rem;
+  color: black;
+  font-size: 1rem;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 2rem;
+}
+.top-drop {
+  margin-top: 2rem;
+}
+.pour {
+  margin-top: 1rem;
+}
+
+.create-dropdown {
+  margin-bottom: 1rem;
+}
+
+.quantity-input {
+  font-size: 12px;
+}
+
+.build-inner {
+  background-color: rgba(205, 205, 205, 0.7);
+  margin-left: auto;
+  margin-right: auto;
+  width: 15%;
+}
+.make-drink {
+  color: whitesmoke;
+  margin-top: 3rem;
+}
+
+.quantity-bar {
+  width: 15%;
+  margin-left: 1rem;
+  background-color: rgba(205, 205, 205, 0.7);
+}
