--- a/src/pages/SignupPage/SignupPage.css
+++ b/src/pages/SignupPage/SignupPage.css
@@ -4,4 +4,8 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 50px;
+  margin-top: 30rem;
+  margin-left: 50rem;
+  margin-right: 50rem;
+  background-color: rgba(205, 205, 205, 0.7);
 }
